tests/checker/good/InstantiatedListUtils.scillib
scilla_version 0

import ListUtils

library InstantiatedListUtils

let list_sort_uint32 = @list_sort Uint32
