tests/checker/bad/lib/TestLibCycle2.scillib
import TestLibCycle1 ListUtils

library TestLibCycle2

let sort_uint32 = @list_sort Uint32
